project(BinPickingUI)

find_package(PCL 1.2 REQUIRED)

add_subdirectory(dataType)
add_subdirectory(pclFunction)
add_subdirectory(meshSampling)
add_subdirectory(HPR)
add_subdirectory(realsense)
add_subdirectory(binSceneMaker)
add_subdirectory(PPF)
add_subdirectory(NachiSocket)
add_subdirectory(robotCommunication)